--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: SuperThisMe
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Posts</h1>
+  <h1 class="pageTitle">최근 포스트</h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
